--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.13.7",
     "node-emoji": "^1.8.1",
+    "node-sentiment": "0.0.6",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
